--- a/proyectoImagemaker-SPA/src/app/app.component.html
+++ b/proyectoImagemaker-SPA/src/app/app.component.html
@@ -7,9 +7,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<div>
+<app-nav></app-nav>
   <h1>
     Proyecto Imagemaker
   </h1>
   <app-value></app-value>
-</div>
