Login y registro usuario

--- a/proyectoImagemaker-SPA/src/app/app.component.html
+++ b/proyectoImagemaker-SPA/src/app/app.component.html
@@ -8,7 +8,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-nav></app-nav>
-  <h1>
-    Proyecto Imagemaker
-  </h1>
-  <app-value></app-value>
+<app-inicio></app-inicio>
+
