--- a/proyectoImagemaker-SPA/src/app/nav/nav.component.html
+++ b/proyectoImagemaker-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Titulo Proyecto</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Titulo Proyecto</a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf="logueado()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Inicio</a>
       </li>
@@ -10,22 +11,19 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Opcion deshabilitada</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="deslogueado()">Logout</a>
       </li>      
     </ul>
 
     <!-- Si la funcion logueado retorna token, muestra el div -->
-    <div *ngIf="logueado()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Bienvenido usuario
+    <div *ngIf="logueado()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Bienvenido {{servicioAutenticacion.tokenDecodificado?.unique_name | titlecase}}
       </a>
     
-      <div class="dropdown-menu">
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Editar perfil</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)="deslogueado()"><i class="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
 
@@ -37,5 +35,7 @@
       <!-- [disabled]="!formularioLogin.valid" Botón de login deshabilitado hasta que los dos textos tengan contenido -->
       <button [disabled]="!formularioLogin.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
+  </div>
+  
 
 </nav>
