Ruteo de links menu funcional

--- a/proyectoImagemaker-SPA/src/app/nav/nav.component.html
+++ b/proyectoImagemaker-SPA/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Titulo Proyecto</a>
+    <a class="navbar-brand" [routerLink]="['/inicio']" >Titulo Proyecto</a>
 
     <ul *ngIf="logueado()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/miembros']">Matches</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Opcion 1</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/listas']">Listas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Opcion deshabilitada</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/mensajes']">Mensajes</a>
       </li>      
     </ul>
 
