--- a/proyectoImagemaker-SPA/src/app/app.component.html
+++ b/proyectoImagemaker-SPA/src/app/app.component.html
@@ -8,5 +8,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-nav></app-nav>
-<app-inicio></app-inicio>
+<router-outlet></router-outlet>
 
